--- a/task_js_dom/side-menu/scss/layout/_main.scss
+++ b/task_js_dom/side-menu/scss/layout/_main.scss
@@ -1,4 +1,6 @@
 // main styles
 .content {
-  flex: 75%;
+  height: 100%;
+
+  background: url(/images/kottans-bg.svg) center / auto 80% no-repeat fixed;
 }
