--- a/task_js_dom/side-menu/style.css
+++ b/task_js_dom/side-menu/style.css
@@ -124,101 +124,231 @@ table {
 }
 
 .wrap {
-  display: flex;
-  flex-direction: row;
+  display: grid;
+  grid-template: 1fr/280px 1fr;
   width: 100%;
-  background-color: #e3e9f7;
+  background: #e3e9f7;
+  transition: all 0.3s ease-in 0s;
+  -webkit-transition: all 0.3s ease-in 0s;
+  -moz-transition: all 0.3s ease-in 0s;
+  -ms-transition: all 0.3s ease-in 0s;
+  -o-transition: all 0.3s ease-in 0s;
 }
-
-.hidden {
-  display: none;
+.wrap.hidden {
+  grid-template: 1fr/80px 1fr;
 }
 
 .sidebar {
-  flex: 25%;
   display: flex;
   flex-direction: column;
-  min-width: 220px;
-  max-width: 280px;
+  width: 280px;
   background-color: #11111d;
+  transition: all 0.3s ease-in 0s;
+  -webkit-transition: all 0.3s ease-in 0s;
+  -moz-transition: all 0.3s ease-in 0s;
+  -ms-transition: all 0.3s ease-in 0s;
+  -o-transition: all 0.3s ease-in 0s;
 }
 .sidebar__header {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  padding: 20px;
+  justify-content: flex-end;
+  margin: 20px;
+  background-color: #1d1b31;
+  border-radius: 8px;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  -ms-border-radius: 8px;
+  -o-border-radius: 8px;
 }
-.sidebar__menu {
-  flex: 1 1 auto;
-}
-.sidebar__footer {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  padding: 20px 0;
-}
-
-.header__arrow {
+.sidebar__arrow {
   position: relative;
-  align-self: flex-end;
-  height: 28px;
-  width: 20px;
+  height: 40px;
+  width: 40px;
   cursor: pointer;
+  border: 2px solid #1d1b31;
+  border-radius: 8px;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  -ms-border-radius: 8px;
+  -o-border-radius: 8px;
+  transition: all 0.3s ease-in 0s;
+  -webkit-transition: all 0.3s ease-in 0s;
+  -moz-transition: all 0.3s ease-in 0s;
+  -ms-transition: all 0.3s ease-in 0s;
+  -o-transition: all 0.3s ease-in 0s;
 }
-.header__arrow::before, .header__arrow::after {
+.sidebar__arrow::before, .sidebar__arrow::after {
   content: "";
   position: absolute;
-  right: 0;
+  right: 10px;
   width: 16px;
   height: 2px;
   background-color: #ffffff;
+  transition: all 0.3s ease-in 0s;
+  -webkit-transition: all 0.3s ease-in 0s;
+  -moz-transition: all 0.3s ease-in 0s;
+  -ms-transition: all 0.3s ease-in 0s;
+  -o-transition: all 0.3s ease-in 0s;
+  border-radius: 1px;
+  -webkit-border-radius: 1px;
+  -moz-border-radius: 1px;
+  -ms-border-radius: 1px;
+  -o-border-radius: 1px;
 }
-.header__arrow::before {
-  top: 8px;
-  transform: rotate(-45deg);
-  -webkit-transform: rotate(-45deg);
-  -moz-transform: rotate(-45deg);
-  -ms-transform: rotate(-45deg);
-  -o-transform: rotate(-45deg);
+.sidebar__arrow::before {
+  top: 12px;
+  transform: rotate(-225deg);
+  -webkit-transform: rotate(-225deg);
+  -moz-transform: rotate(-225deg);
+  -ms-transform: rotate(-225deg);
+  -o-transform: rotate(-225deg);
 }
-.header__arrow::after {
-  bottom: 8px;
+.sidebar__arrow::after {
+  bottom: 12px;
+  transform: rotate(225deg);
+  -webkit-transform: rotate(225deg);
+  -moz-transform: rotate(225deg);
+  -ms-transform: rotate(225deg);
+  -o-transform: rotate(225deg);
+}
+.sidebar__arrow:focus, .sidebar__arrow:hover {
+  border: 2px solid #ffffff;
+}
+.sidebar__menu {
+  flex: 1 1 auto;
+  padding: 0px 20px;
+}
+.sidebar__item {
+  position: relative;
+  margin: 20px 16px;
+  height: 40px;
+  font-weight: 600;
+  text-transform: uppercase;
+  letter-spacing: 0.015em;
+  background-color: #1d1b31;
+  border-radius: 8px;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  -ms-border-radius: 8px;
+  -o-border-radius: 8px;
+  overflow: hidden;
+  cursor: pointer;
+  transition: all 0.3s ease-in 0s;
+  -webkit-transition: all 0.3s ease-in 0s;
+  -moz-transition: all 0.3s ease-in 0s;
+  -ms-transition: all 0.3s ease-in 0s;
+  -o-transition: all 0.3s ease-in 0s;
+}
+.sidebar__item .sidebar__text {
+  position: absolute;
+  top: 10px;
+  left: 40px;
+}
+.sidebar__item .sidebar__img {
+  position: absolute;
+  top: 6px;
+  left: 6px;
+}
+.sidebar__item:hover, .sidebar__item:focus {
+  color: #1d1b31;
+  background-color: #e3e9f7;
+}
+.sidebar__text {
+  opacity: 1;
+  transition: opacity 0.2s linear 0s;
+  -webkit-transition: opacity 0.2s linear 0s;
+  -moz-transition: opacity 0.2s linear 0s;
+  -ms-transition: opacity 0.2s linear 0s;
+  -o-transition: opacity 0.2s linear 0s;
+}
+.sidebar__footer {
+  margin: 20px;
+  height: 40px;
+  background-color: #1d1b31;
+  border-radius: 8px;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  -ms-border-radius: 8px;
+  -o-border-radius: 8px;
+}
+.sidebar__link {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 100%;
+  font-size: 24px;
+  font-weight: 700;
+  color: inherit;
+  border: 2px solid #1d1b31;
+  border-radius: 8px;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  -ms-border-radius: 8px;
+  -o-border-radius: 8px;
+  overflow: hidden;
+  transition: all 0.3s ease-in 0s;
+  -webkit-transition: all 0.3s ease-in 0s;
+  -moz-transition: all 0.3s ease-in 0s;
+  -ms-transition: all 0.3s ease-in 0s;
+  -o-transition: all 0.3s ease-in 0s;
+}
+.sidebar__link .sidebar__text,
+.sidebar__link .sidebar__img {
+  transition: all 0.3s ease-in 0s;
+  -webkit-transition: all 0.3s ease-in 0s;
+  -moz-transition: all 0.3s ease-in 0s;
+  -ms-transition: all 0.3s ease-in 0s;
+  -o-transition: all 0.3s ease-in 0s;
+}
+.sidebar__link .sidebar__text {
+  position: absolute;
+  top: 6px;
+  left: 88px;
+}
+.sidebar__link .sidebar__img {
+  position: absolute;
+  top: 2px;
+  left: 48px;
+}
+.sidebar__link:focus, .sidebar__link:hover {
+  border-color: #ffffff;
+}
+.sidebar.hidden {
+  width: 80px;
+}
+.sidebar.hidden .sidebar__text {
+  opacity: 0;
+}
+.sidebar.hidden .sidebar__arrow::before {
   transform: rotate(45deg);
   -webkit-transform: rotate(45deg);
   -moz-transform: rotate(45deg);
   -ms-transform: rotate(45deg);
   -o-transform: rotate(45deg);
 }
-
-.logo {
-  height: 40px;
+.sidebar.hidden .sidebar__arrow::after {
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
 }
-.logo__text {
-  display: flex;
-  flex-direction: row;
-  align-items: flex-end;
-  padding-left: 48px;
-  height: 100%;
-  font-size: 24px;
-  font-weight: 700;
-  color: inherit;
-  background: url(../../images/kottans-logo.png) left center/40px 40px no-repeat;
+.sidebar.hidden .sidebar__link {
+  left: 0px;
 }
-
-.menu__item {
-  font-weight: 600;
-  text-transform: uppercase;
-  letter-spacing: 0.015em;
+.sidebar.hidden .sidebar__link .sidebar__text {
+  left: 40px;
 }
-
-.footer {
-  background-color: #1d1b31;
+.sidebar.hidden .sidebar__link .sidebar__img {
+  left: 2px;
 }
-.footer__text {
-  font-size: 16px;
+.sidebar.hidden .sidebar__item {
+  margin: 20px 0;
 }
 
 .content {
-  flex: 75%;
+  height: 100%;
+  background: url(/images/kottans-bg.svg) center/auto 80% no-repeat fixed;
 }
