--- a/task_js_dom/side-menu/scss/layout/_main.scss
+++ b/task_js_dom/side-menu/scss/layout/_main.scss
@@ -1,6 +1,125 @@
 // main styles
 .content {
-  height: 100%;
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
 
-  background: url(/images/kottans-bg.svg) center / auto 80% no-repeat fixed;
+  &__container {
+    padding: 50px;
+
+    width: 100%;
+    height: 100%;
+  }
+
+  &__bg {
+    @include flexCol;
+
+    background-color: $primaryBg;
+    @include border-radius(8px);
+  }
+
+  &__title {
+    margin: 40px auto 20px;
+
+    font-size: 36px;
+    font-weight: 700;
+    letter-spacing: 0.1em;
+  }
+
+  &__text {
+    margin: 10px 40px;
+
+    font-size: 16px;
+    text-indent: 24px;
+
+    &:last-of-type {
+      margin-bottom: 40px;
+    }
+  }
+
+  &__items {
+    @include flexRow;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+
+    padding: 0 20px 40px;
+  }
+
+  &__item {
+    margin: 8px;
+    padding: 12px;
+
+    background-color: $secondaryBg;
+    @include border-radius(8px);
+  }
+
+  &__img {
+    width: 100%;
+    height: auto;
+
+    @include border-radius(8px);
+  }
+}
+
+@media (max-width: 768px) {
+  .content {
+    &__container {
+      padding: 12px;
+    }
+
+    &__title {
+      margin: 20px auto 12px;
+    }
+
+    &__text {
+      margin: 8px 20px;
+
+      &:last-of-type {
+        margin-bottom: 20px;
+      }
+    }
+
+    &__items {
+      padding: 0 8px 20px;
+    }
+
+    &__item {
+      margin: 4px;
+      padding: 6px;
+    }
+  }
+}
+
+@media (max-width: 512px) {
+  .content {
+    &__container {
+      padding: 12px;
+    }
+
+    &__title {
+      margin: 20px auto 12px;
+
+      font-size: 28px;
+      letter-spacing: 0.015em;
+    }
+
+    &__text {
+      margin: 8px 20px;
+
+      font-size: 14px;
+
+      &:last-of-type {
+        margin-bottom: 20px;
+      }
+    }
+
+    &__items {
+      padding: 0 8px 20px;
+    }
+
+    &__item {
+      margin: 4px;
+      padding: 6px;
+    }
+  }
 }
