--- a/task_js_dom/side-menu/style.css
+++ b/task_js_dom/side-menu/style.css
@@ -124,10 +124,11 @@ table {
 }
 
 .wrap {
+  position: relative;
   display: grid;
   grid-template: 1fr/280px 1fr;
   width: 100%;
-  background: #e3e9f7;
+  background: #e3e9f7 url(../../images/kottans-bg.svg) center/auto 80% no-repeat fixed;
   transition: all 0.3s ease-in 0s;
   -webkit-transition: all 0.3s ease-in 0s;
   -moz-transition: all 0.3s ease-in 0s;
@@ -138,7 +139,20 @@ table {
   grid-template: 1fr/80px 1fr;
 }
 
+@media (max-width: 512px) {
+  .wrap {
+    grid-template: 1fr/220px 1fr;
+  }
+  .wrap.hidden {
+    grid-template: 1fr/60px 1fr;
+  }
+}
 .sidebar {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  grid-column: 1/2;
+  grid-row: 1/2;
   display: flex;
   flex-direction: column;
   width: 280px;
@@ -250,7 +264,7 @@ table {
   top: 6px;
   left: 6px;
 }
-.sidebar__item:hover, .sidebar__item:focus {
+.sidebar__item.active, .sidebar__item:hover, .sidebar__item:focus {
   color: #1d1b31;
   background-color: #e3e9f7;
 }
@@ -348,7 +362,143 @@ table {
   margin: 20px 0;
 }
 
+@media (max-width: 512px) {
+  .sidebar {
+    width: 220px;
+  }
+  .sidebar__header {
+    margin: 20px 10px;
+  }
+  .sidebar__menu {
+    padding: 0px 10px;
+  }
+  .sidebar__item {
+    margin: 20px 8px;
+    font-size: 16px;
+  }
+  .sidebar__item .sidebar__text {
+    top: 12px;
+  }
+  .sidebar__footer {
+    margin: 20px 10px;
+  }
+  .sidebar__link {
+    font-size: 20px;
+  }
+  .sidebar__link .sidebar__text {
+    top: 7px;
+    left: 72px;
+  }
+  .sidebar__link .sidebar__img {
+    left: 32px;
+  }
+  .sidebar.hidden {
+    width: 60px;
+  }
+}
 .content {
+  grid-column: 2/3;
+  grid-row: 1/2;
+}
+.content__container {
+  padding: 50px;
+  width: 100%;
   height: 100%;
-  background: url(/images/kottans-bg.svg) center/auto 80% no-repeat fixed;
+}
+.content__bg {
+  display: flex;
+  flex-direction: column;
+  background-color: #11111d;
+  border-radius: 8px;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  -ms-border-radius: 8px;
+  -o-border-radius: 8px;
+}
+.content__title {
+  margin: 40px auto 20px;
+  font-size: 36px;
+  font-weight: 700;
+  letter-spacing: 0.1em;
+}
+.content__text {
+  margin: 10px 40px;
+  font-size: 16px;
+  text-indent: 24px;
+}
+.content__text:last-of-type {
+  margin-bottom: 40px;
+}
+.content__items {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  padding: 0 20px 40px;
+}
+.content__item {
+  margin: 8px;
+  padding: 12px;
+  background-color: #1d1b31;
+  border-radius: 8px;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  -ms-border-radius: 8px;
+  -o-border-radius: 8px;
+}
+.content__img {
+  width: 100%;
+  height: auto;
+  border-radius: 8px;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  -ms-border-radius: 8px;
+  -o-border-radius: 8px;
+}
+
+@media (max-width: 768px) {
+  .content__container {
+    padding: 12px;
+  }
+  .content__title {
+    margin: 20px auto 12px;
+  }
+  .content__text {
+    margin: 8px 20px;
+  }
+  .content__text:last-of-type {
+    margin-bottom: 20px;
+  }
+  .content__items {
+    padding: 0 8px 20px;
+  }
+  .content__item {
+    margin: 4px;
+    padding: 6px;
+  }
+}
+@media (max-width: 512px) {
+  .content__container {
+    padding: 12px;
+  }
+  .content__title {
+    margin: 20px auto 12px;
+    font-size: 28px;
+    letter-spacing: 0.015em;
+  }
+  .content__text {
+    margin: 8px 20px;
+    font-size: 14px;
+  }
+  .content__text:last-of-type {
+    margin-bottom: 20px;
+  }
+  .content__items {
+    padding: 0 8px 20px;
+  }
+  .content__item {
+    margin: 4px;
+    padding: 6px;
+  }
 }
